--- a/glossary.Rmd
+++ b/glossary.Rmd
@@ -7,7 +7,6 @@ output:
     toc_float: yes
 bibliography: references.bib
 ---
-**More Coming Soon!**
 
 ```{r load packages,message=FALSE, warning=FALSE, echo=FALSE}
 library(igraph)
@@ -21,7 +20,7 @@ library(d3Network)
 
 # Boundary Definitions
 
-In Marxan, the boundary definitions (*i.e.* `boundary.dat`) in conjunction with the Boundary Length Modifier help achieve a solution that has a reasonable edge to area ratio. Typically these boundaries are numerically defined as the physical length of the shared shared boundary between planning units. Marxan Connect allows users to use connectivity data as boundary definitions (see @Beger2010-ir). This encourages the selection of connected networks of protected areas and minimizes the effective "edge" of the network based on movement information.
+In Marxan, the boundary definitions (*i.e.* `boundary.dat`) in conjunction with the Boundary Length Modifier (BLM) can help achieve a solution with a reasonable edge to area ratio (*i.e.* minimize edge while still achieving representativity targets). Typically boundaries are numerically defined as the physical length of the shared boundary between planning units. Marxan Connect allows users to use boundary definitions to incorporate connectivity data (see @Beger2010-ir) and the BLM is then used as a Connectivity Strength Modifier. This encourages the selection of connected networks of protected areas and minimizes the effective "edge" of the network based on movement information.
 
 Alternatively (or in conjunction), connectivity may be incorporated into the Marxan analysis by using [Conservation Features](glossary.html#conservation_feature).
 
@@ -34,13 +33,13 @@ Incorporates the connectivity data into the boundary definitions (*i.e.* `bounda
 Incorporates the connectivity data into the boundary definitions (*i.e.* `boundary.dat`) after transforming into a minimum planar graph (see @Fall2007-ku).
 
 
-## Data Formats
+# Data Formats
 
 Marxan Connect can accept different formats of connectivity data:
 
-### Connectivity Matrix
+## Connectivity Matrix
 
-We use a broad definition of connectivity matrix. The first column contains the donor site IDs and the recipient site IDs are in the first row. 
+We use a broad definition of connectivity matrix. The the donor site IDs are shown in the first column contains and the recipient site IDs in the first row. 
 
 |     |   1   |   2   |   3   |   4   |  ...  |
 |:---:|:-----:|:-----:|:-----:|:-----:|:-----:|
@@ -52,7 +51,7 @@ We use a broad definition of connectivity matrix. The first column contains the 
 
 The cells contain information about the connectivity between those sites, but their exact value depends on whether the connectivity matrix is a [Probability](glossary.html#probability), a [Migration](glossary.html#migration), or a [Flow](glossary.html#flow) matrix
 
-### Edge List
+## Edge List
 
 The first column contains the donor site IDs and second column contains the recipient site IDs. 
 
@@ -64,9 +63,9 @@ The first column contains the donor site IDs and second column contains the reci
 |  1  |  4  |  0.01 |
 | ... | ... |  ...  |
 
-The value column contain information about the connectivity between those sites, but their exact value depends on whether the edge list is a [Probability](glossary.html#probability), a [Migration](glossary.html#migration), or a [Flow](glossary.html#flow) edge list
+The value column contains information about the connectivity between those sites, but their exact value depends on whether the edge list is a [Probability](glossary.html#probability), a [Migration](glossary.html#migration), or a [Flow](glossary.html#flow) edge list
 
-### Edge List with Time
+## Edge List with Time
 
 The first column contains time, the second column contains the donor site IDs and the third column contains the recipient site IDs. 
 
@@ -81,13 +80,13 @@ The first column contains time, the second column contains the donor site IDs an
 
 The value column contain information about the connectivity between those sites at that particular time, but their exact value depends on whether the edge list is a [Probability](glossary.html#probability), a [Migration](glossary.html#migration), or a [Flow](glossary.html#flow) edge list
 
-## Data Types
+# Data Types
 
 Marxan Connect can accept different types of connectivity data:
 
-### Flow
+## Flow
 
-Flow represents the amount of nutrients, energy, or organisms that move from one planning unit to another. 
+Flow represents the amount (individuals, grams, etc) of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> (Genes, Organisms, Nutrients, Energy) that move from one planning unit to another. 
 
 Example Flow Matrix:
 
@@ -99,9 +98,9 @@ Example Flow Matrix:
 |**4**| 22 | 17 | 3 |  2  |  ...  |
 | ... |  ...  |  ...  |  ...  |  ...  |  ...  |
 
-### Migration
+## Migration
 
-Migration represents the proportion of of nutrients, energy, or organisms which arrived in the recipient planning unit originated in the donor planning unit. Columns sum to 1.
+Migration represents the proportion of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> of those which arrive in a recipient planning unit originated in a donor planning unit. Columns sum to 1.
 
 Example Flow Matrix:
 
@@ -113,9 +112,9 @@ Example Flow Matrix:
 |**4**| 0.022 | 0.017 | 0.001 |  0.2  |  ...  |
 | ... |  ...  |  ...  |  ...  |  ...  |  ...  |
 
-### Probability
+## Probability
 
-Probability represents the proportion of of nutrients, energy, or organisms produced in the donor planning unit which move to the recipient planning unit. If there is no mortality, then rows sum to 1. 
+Probability represents the proportion of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> of those originating in a donor planning unit which arrive in a recipient planning unit. If there is no mortality, then rows sum to 1. 
 
 Example Probability Matrix:
 
@@ -129,15 +128,15 @@ Example Probability Matrix:
 
 # Conservation Feature
 
-Marxan Connect can calculate various connectivity metrics that represent the process of ecological connectivity (e.g. centrality, outflow). These metrics can be used as conservation features in Marxan. 
+Marxan Connect can calculate various connectivity metrics (e.g. centrality, outflow), which can be used as conservation features in Marxan. 
 
-Alternatively (or in conjunction), connectivity may be incorporated into the Marxan analysis by using [Boundary Definitions](glossary.html#boundary_definitions).
+Alternatively (or in conjunction), connectivity may be incorporated into the Marxan analysis using [Boundary Definitions](glossary.html#boundary_definitions).
 
 ## In Degree
 
-**Definition**: The in degree indicates the number of connections into each planning unit [@Minor2007-fb].
+**Definition**: In degree indicates the number of connections into each planning unit [@Minor2007-fb].
 
-**Objectives**: Prioritize for areas which receive input from many other planning units. These planning units may have higher biodiversity (ref) and population resilience (ref) as a result of the high in degree.
+**Objectives**: Prioritize planning units which receive input from a relative abundance of other planning units. The recipient planning units may have higher biodiversity (ref) and population resilience (ref) as a result of the high in degree.
 
 **Equation**: The in degree of a planning unit ${v}$ (${ID(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections).
 
@@ -171,7 +170,7 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Out Degree
 
-**Definition**: The out degree indicates the number of connections out of each planning unit [@Minor2007-fb].
+**Definition**: Out degree indicates the number of connections originating from each planning unit [@Minor2007-fb].
 
 **Objectives**: Prioritize for areas which deliver output to many other planning units. These planning units may influence many other planning units.
 
@@ -207,9 +206,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Betweenness Centrality 
 
-**Definition**: The betweeness centrality of a planning unit indicates the number of shortest paths between pairs of planning units that pass through that planning unit. It ignores the weights of each connection [@Minor2007-fb].
+**Definition**: Betweenness centrality of a planning unit indicates the number of shortest paths between pairs of planning units that pass through that planning unit. It ignores the weights of each connection [@Minor2007-fb].
 
-**Objectives**: Prioritize for areas which may act as crucial stepping stones.
+**Objectives**: Prioritize planning units which may act as critical stepping stones among other planning units.
 
 **Equation**: The betweenness centrality of a planning unit ${v}$ (${BC(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections) is
 
@@ -243,9 +242,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Eigenvector Centrality
 
-**Definition**: The eigenvector centrality indicates the influence that planning unit has on the network [@DAloia2017-jp].
+**Definition**: Eigenvector centrality indicates the influence (considers number of connections and their weight) that a planning unit has on the network [@DAloia2017-jp]. Eigenvector centrality is functionally similar to [Google PageRank]("glossary.html#google_pagerank"), and is recommended for well connected planning areas.
 
-**Objectives**: Prioritize for areas which are important to maintaining connectivity within the whole study area.
+**Objectives**: Prioritize planning units which are important to maintaining connectivity within the whole planning area.
 
 **Equation**: The Eigenvector centrality of a planning unit ${v}$ (${EVC(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (migration) matrix
 
@@ -280,9 +279,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Google PageRank
 
-**Definition**: The PageRank indicates the number and quality of connections to a planning unit to determine an estimated importance of the planning unit.
+**Definition**: PageRank indicates the number and quality (weight) of connections to a planning unit which represents an estimated importance of the planning unit. PageRank is functionally similar to [Eigenvector Centrality]("glossary.html#google_pagerank"), and is recommended for sparsely connected planning areas.
 
-**Objectives**: Prioritize for areas which are important to maintaining connectivity within the whole study area.
+**Objectives**: Prioritize planning units which are important to maintaining connectivity within the whole study area.
 
 **Equation**: The weighted PageRank of a planning unit ${v}$ (${PR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability? migration?) matrix.
 
@@ -317,9 +316,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Self Recruitment
 
-**Definition**: The self recruitment indicates the proportion of locally produced recruits relative to all local recruits [@DAloia2017-jp].
+**Definition**: Self recruitment indicates the proportion of recruits produced in a planning unit relative to all recruits to that planning unit [@DAloia2017-jp].
 
-**Objectives**: Prioritize for areas which are relatively self-sustaining.
+**Objectives**: Prioritize planning units which are more self-sustaining.
 
 **Equation**: The self recruitment of a planning unit ${v}$ (${SR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
@@ -354,9 +353,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Local Retention
 
-**Definition**: The local retention indicates the proportion of potential recruits produced in planning unit ${t}$ which are retained in in planning unit ${t}$. 
+**Definition**: Local retention indicates the proportion of potential recruits produced in a planning unit which are retained within that planning unit. 
 
-**Objectives**: Prioritize for areas which are relatively self-sustaining.
+**Objectives**: Prioritize planning units which are relatively self-sustaining.
 
 **Equation**: The local retention of a planning unit ${v}$ (${LR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
@@ -389,9 +388,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Inflow
 
-**Definition**: The inflow indicates the amount of nutrients, energy, or organisms coming into a planning unit.
+**Definition**: Inflow indicates the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> arriving into a planning unit.
 
-**Objectives**: Prioritize for areas which are heavily subsidized by other planning units.
+**Objectives**: Prioritize planning units which are heavily subsidized by other planning units.
 
 **Equation**: The inflow of a planning unit ${v}$ (${IF(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
@@ -427,9 +426,9 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Outflow
 
-**Definition**: The outflow indicates the amount of nutrients, energy, or organisms coming out of a planning unit.
+**Definition**: The outflow indicates the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> leaving a planning unit.
 
-**Objectives**: Prioritize for areas which subsidize other planning units (e.g. maximize spillover).
+**Objectives**: Prioritize planning units which subsidize other planning units (e.g. maximize spillover).
 
 **Equation**: The inflow of a planning unit ${v}$ (${OF(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
@@ -465,13 +464,13 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Temporal Connectivity Covariance
 
-**Definition**: The temporal connectivity covariance indicates the temporal complementarity of planning units to existing connections within the focus area [@Watson2012-ug].
+**Definition**: Temporal connectivity covariance indicates the temporal complementarity (*i.e.* negative covariance) of connections from a planning unit to the focus areas to existing connections within the focus area [@Watson2012-ug].
 
-It is only available if a connectivity 'List with Time' was provided under Demographic Input in the Connectivity Input tab as well as a focus area shapefile under the Spatial Input tab.
+The option to calculate it is only available if a connectivity 'List with Time' was provided under Demographic Input in the Connectivity Input tab, and a focus area shapefile was provided under the Spatial Input tab.
 
 *Warning: This metric is still experimental 'beta' phase*
 
-**Objectives**: Prioritize for areas which that increase focus area metapopulation growth and stability.
+**Objectives**: Prioritize planning units which increase focus area metapopulation growth and stability.
 
 
 **Equation**: The temporal connectivity covariance of a planning unit ${v}$ (${TCC(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${A=(a_{v,t})}$ be the adjacency matrix
@@ -538,15 +537,15 @@ gganimate(p,"images/temporalconnectivity.gif")
 
 ## Focus Area Recipients
 
-**Definition**: The focus area recipients indicates the amount of nutrients, energy, or organisms coming into a planning unit from the focus area.
+**Definition**: The focus area recipients indicates the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> coming into planning units from the focus area.
 
-**Objectives**: Prioritize for areas which are subsidized by the focus area (e.g. create stepping stones).
+**Objectives**: Prioritize planning units which are subsidized by the focus area.
 
 **Equation**: The focus area recipients of a planning unit ${v}$ (${FAR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle FAR(v) = \sum_{t \ne v \in V(FA)}c_{t,v}N_t}$$
 
-where ${N_t}$ is the amount of nutrients, energy, or organisms produced in planning unit ${t}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the focus area.
+where ${N_t}$ is the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${t}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the focus area.
 
 **Illustration**
 
@@ -578,15 +577,15 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Focus Area Donors
 
-**Definition**: The focus area donors indicates the amount of nutrients, energy, or organisms coming into the focus area from a planning unit.
+**Definition**: Focus area donors indicates the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> arriving into the focus area from planning units.
 
-**Objectives**: Prioritize for areas which subsidize the focus area (e.g. protect demographic sources to existing protected areas).
+**Objectives**: Prioritize planning units which subsidize the focus area (e.g. protect demographic sources to existing protected areas).
 
 **Equation**: The focus area donors of a planning unit ${v}$ (${FAD(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle FAD(v) = \sum_{t \ne v \in V(FA)}c_{v,t}N_v}$$
 
-where ${N_v}$ is the amount of nutrients, energy, or organisms produced in planning unit ${v}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the focus area.
+where ${N_v}$ is the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${v}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the focus area.
 
 **Illustration**
 
@@ -618,15 +617,15 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Avoidance Area Recipients
 
-**Definition**: The avoidance area recipients indicates the amount of nutrients, energy, or organisms coming into a planning unit from the avoidance area.
+**Definition**: Avoidance area recipients indicates the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> arriving into planning units from the avoidance area.
 
-**Objectives**: Prioritize for areas which are least subsidized by the avoidance area (e.g. avoid connectivity for invasive species hotspots).
+**Objectives**: Prioritize planning units which are least subsidized by the avoidance area (e.g. avoid connectivity for invasive species hot-spots).
 
 **Equation**: The avoidance area recipients of a planning unit ${v}$ (${AAR(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle AAR(v) = \sum_{t \ne v \in V(AA)}c_{t,v}N_t}$$
 
-where ${N_t}$ is the amount of nutrients, energy, or organisms produced in planning unit ${t}$ and ${V(AA)}$ are the ${V}$ which spatially overlap with the avoidance area.
+where ${N_t}$ is the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${t}$ and ${V(AA)}$ are the ${V}$ which spatially overlap with the avoidance area.
 
 **Illustration**
 
@@ -658,15 +657,15 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 ## Avoidance Area Donors
 
-**Definition**: The avoidance area donors indicates the amount of nutrients, energy, or organisms coming into the avoidance area from a planning unit.
+**Definition**: Avoidance area donors indicates the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> arriving into the avoidance area from planning units.
 
-**Objectives**: Prioritize for areas which subsidize the avoidance area (e.g. increase resilience for impacted zones).
+**Objectives**: Prioritize planning units which subsidize the avoidance area (e.g. increase resilience for impacted zones).
 
 **Equation**: The avoidance area donors of a planning unit ${v}$ (${FAD(v)}$) in a graph ${G:=(V,E)}$ with ${V}$ vertices (*i.e.* planning units) and ${E}$ edges (*i.e.* connections), let ${C=(c_{v,t})}$ be the connectivity (probability) matrix.
 
 $${\displaystyle AAD(v) = \sum_{t \ne v \in V(AA)}c_{v,t}N_v}$$
 
-where ${N_v}$ is the amount of nutrients, energy, or organisms produced in planning unit ${v}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the avoidance area.
+where ${N_v}$ is the amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in planning unit ${v}$ and ${V(FA)}$ are the ${V}$ which spatially overlap with the avoidance area.
 
 **Illustration**
 
@@ -699,15 +698,15 @@ ggraph(as_tbl_graph(G),layout="fr") +
 
 # Focus Areas
 
-For some of the connectivity metrics (e.g. Temporal Connectivity Correlation, or Focus Area Donors), it is important to consider 'focus areas' for which connectivity should be optimised. Such focus areas could include existing protected areas, important habitat for endangered species, and/or otherwise important habitats for connectivity (e.g. nursery grounds, genetically unique and potentially adaptively advantageous populations). Marxan with Connectivity assumes that the planning units within the 'focus areas' will otherwise be targeted as normal conservation targets in Marxan. Loading focus areas into Marxan with Connectivity allows users to set conservation targets for the areas that complement the 'focus areas'.
+For some of the connectivity metrics (e.g. Temporal Connectivity Correlation, or Focus Area Donors), it is important to consider 'focus areas' for which connectivity should be optimized. Examples of such focus areas are existing protected areas, critical habitat for endangered species, and/or otherwise important habitats for connectivity (e.g. nursery grounds, genetically unique and potentially adaptively advantageous populations). Marxan Connect assumes that the planning units within the focus areas will otherwise be protected. Loading focus areas into Marxan Connect allows users to set conservation targets for other areas that complement focus areas, or to "lock-in" (fixed in the final reserve) the planning units which are overlap the focus area.
 
 # Local Production
 
-The amount of nutrients, energy, or organisms produced in each planning unit
+The amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in each planning unit
 
 # Resistance Matrix
 
-Contains habitat specific values for resistance to movement. The first column contains the home habitat IDs and the habitat IDs for habitats through which movement may occur are in the first row.
+Contains habitat specific values for resistance to movement through this habitat. Home habitat IDs are in the first column and IDs for habitats through which movement may occur are in the first row.
 
 |     |   Sand   |   Boulder   |   Cobble   |   Mud   |  ...  |
 |:---:|:-----:|:-----:|:-----:|:-----:|:-----:|
@@ -719,7 +718,7 @@ Contains habitat specific values for resistance to movement. The first column co
 
 # Planning Units
 
-Spatial subunits of the entire planning area. Can be gridded (*e.g.* hexagonal) or feature based (e.g. reefs) as in Marxan.
+Spatial sub-units of the entire planning area. Can be gridded (*e.g.* hexagonal) or feature based (e.g. reefs) as in Marxan.
 
 # Shapefile
 
